Fixes to style on mobile

--- a/ccbrowse/www/css/ccbrowse.scss
+++ b/ccbrowse/www/css/ccbrowse.scss
@@ -10,18 +10,30 @@
 @import "page.scss";
 @import "yaxis.scss";
 
+html {
+    font-size: 15px;
+}
 
 body {
     margin: 0;
     background: #333;
     font-family: Asap, helvetica, sans-serif;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 #overlay {
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     overflow: hidden;
-    width: 100%;
-    height: 100%;
     z-index: 500;
     pointer-events: none;
 }
@@ -40,29 +52,12 @@ a:hover:before {
 }
 
 .context {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
     text-align: center;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
 }
 
-/* Standard screen. */
-@media screen {
-    html { font-size: 15px; }
-    header { height: 110px; }
-    .context { top: 110px; }
-    #map-container { right: 130px; }
-    #colormap { left: 20px; right: 20px; }
-    #colormap-container { width: 130px; }
-}
-
-/* Small screen. */
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
     html { font-size: 13px; }
-    header { height: 105px; }
-    .context { top: 105px; }
-    #map-container { right: 100px; }
-    #colormap { left: 10px; right: 10px; }
-    #colormap-container { width: 100px; }
 }
