--- a/ccbrowse/www/css/header.scss
+++ b/ccbrowse/www/css/header.scss
@@ -1,14 +1,19 @@
 header {
-    position: relative;
-    /* height: defined in ccbrowse.scss */
     z-index: 200;
     background-color: #111;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .header-top {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding: 0.3rem 0;
+    }
 
     h1 {
-        float: left;
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-left: 0.2em;
+        margin: auto 0.6rem;
         font-size: 100%;
 
         a {
@@ -16,7 +21,6 @@ header {
             font-size: 200%;
             font-weight: normal;
             color: transparent;
-            padding: 0.1em 0.2em;
             background: url('../img/ccbrowse.png') no-repeat center center;
             background-size: 4em;
 
@@ -27,16 +31,15 @@ header {
     }
 
     #toolbox {
-        float: right;
         color: #eee;
-        margin-top: 0;
-        margin-bottom: 0;
-        margin-right: 0.5em;
+        margin: auto 0.6rem;
+        display: flex;
+        align-items: center;
 
         a {
             display: block;
             font-size: 160%;
-            padding: 0.4em 0.5em 0.4em 1.8em;
+            padding-left: 1.8em;
         }
 
         a[href="#about"] {
